language/move-compiler/tests/move_check/parser/function_without_body.exp
error[E02007]: invalid 'fun' declaration
  ┌─ tests/move_check/parser/function_without_body.move:3:5
  │
3 │     fun fn();
  │     ^^^^^^^^^ Expected body '{..}' for function.

